--- a/assets/style/rewrite.styl
+++ b/assets/style/rewrite.styl
@@ -1,7 +1,13 @@
 // TODO: fix styles
 
 .theme--light.v-text-field--solo > .v-input__control > .v-input__slot {
+  padding-left: 27px !important;
   border-radius: 10px !important;
+}
+
+.theme--light.v-card,
+.theme--light.v-sheet {
+  background-color: transparent !important;
 }
 
 .v-label {
@@ -22,4 +28,51 @@ table.v-table tbody td {
 
 table.v-table thead tr.v-datatable__progress th {
   height: 0 !important;
+}
+
+// -----------------------------------------------------typographic
+h1 {
+  font-size: 36px;
+  line-height: 1;
+  font-weight: normal;
+}
+
+// -----------------------------------------------------btn
+.v-btn {
+  min-width: 60px !important;
+}
+
+// -----------------------------------------------------tabs
+.v-tabs__container {
+  margin-left: -60px;
+}
+.v-tabs__slider {
+  height: 3px !important;
+}
+
+.v-tabs__bar {
+  z-index: 1;
+  padding-left: 63px;
+  padding-right: 63px;
+  box-shadow: 0 4px 5px -2px rgba(0, 0, 0, 0.15);
+}
+
+.v-tabs__div {
+  margin-left 60px;
+  max-width 300px !important;
+  font-size: 20px !important;
+  text-transform: none !important;
+  font-weight: normal !important;
+}
+
+.v-tabs__item {
+  display: block !important;
+  padding: 0 !important;
+  line-height: 2.2 !important;
+  color: #000;
+
+  &:not(.v-tabs__item--active) {
+    opacity: 1 !important;
+    color: #b3b3b3;
+  }
 }
