--- a/assets/style/rewrite.styl
+++ b/assets/style/rewrite.styl
@@ -37,9 +37,16 @@ h1 {
   font-weight: normal;
 }
 
-// -----------------------------------------------------btn
+// -----------------------------------------------------btn & link
 .v-btn {
   min-width: 60px !important;
+}
+td a {
+  color: #29abe2 !important;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 // -----------------------------------------------------tabs
